# charm-aws-cloud-provider

./: CONTRIBUTING.md  README.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml
src/: charm.py  config.py  provider_manifests.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/data/: charm.yaml  kube_control_data.yaml
tests/integration/: conftest.py  test_aws_cloud_provider.py
tests/unit/: test_charm.py
upstream/cloud_provider/manifests/v1.26.1/: release.yaml
