# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name="aws-cloud-provider"
version = "0.0.0"
description = "Charmed Operators for AWS Cloud Provider"
readme = "README.md"
requires-python = ">=3.10"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.ruff]
line-length = 99

# Linting tools configuration
[pycodestyle]
max-line-length = 99
max-doc-length = 99

# Linting tools configuration
[tool.lint.mccabe]
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"

[tool.mypy]
mypy_path = "src:lib"
ignore_missing_imports = true

